# mpvs

./: .gitignore  README.md  dda_downloader.py  install.sh  moc-plus.spec  mpvs.spec  os  pyproject.toml  re  requests  run.py
downloads/: A-SOUL - 超级敏感.lrc  AZA微唱团 - 从别后.lrc  K-269、5302 - 超级敏感.lrc  Max.、Cupric、Pocle、桜辰星、浮滑亦品. - 超级敏感.lrc  Smile_小千、橙翼 - 天地由我.lrc  V17-时音、V17-Vila、风袖、吕书君 - 依如旧.aac  V17-时音、V17-Vila、风袖、吕书君 - 依如旧.lrc  一条猫毛虫 - 超级敏感.lrc  优莉酱 - 超级敏感.lrc  侯果 - 烁.lrc  刘宇宁 - 故事未完.lrc  刘德华 - 谢谢你的爱.lrc  卡修Rui - 趁年少.aac  卡修Rui - 趁年少.lrc  叶韶雪、韩穆、张瑜佳 - 超级敏感.lrc  向晚Ava、贝拉Bella、珈乐Carol、嘉然Diana、乃琳Eileen - 超级敏感.lrc  周杰伦 - 听妈妈的话.lrc  周深 - 直破穹苍.aac  周深 - 直破穹苍.lrc  周深 - 蜕.aac  周深 - 蜕.lrc  周深 - 重生.aac  周深 - 重生.lrc  墨绛 - 我就是我.lrc  孟垠希Sissi - 从别后.lrc  廖静媛 - 宿.aac  廖静媛 - 宿.lrc  曹杨 - 不灭.lrc  朱心怡 - 明天.lrc  朱心怡、墨绛 - 遂愿.lrc  李代沫 - 看透.lrc  林小暗 - 超级敏感.lrc  林忆宁、赵若玚 - 超级敏感.lrc  毛唯嘉-AKB48TeamSH - 超级敏感.lrc  流浪的蛙蛙 - 从别后.lrc  浓浓Vane - 翼.lrc  王梓钰 - 少年泪.aac  王梓钰 - 少年泪.lrc  甜菜 - 超级敏感.lrc  白石喵酱、洛天依 - 超级敏感.lrc  (+20 more)
moc-plus/: README.md  browser.py  main.py  player.py  playlist.py  requirements.txt  tui.css
moc_plus/: browser.py  downloader.py  main.py  player.py  playlist.py  tui.py
moc_plus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
斗破苍穹/: 排骨教主 - 苍天由我.lrc  马里奥 - 主角.lrc
